# DepsDetective

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  depdetective.example.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dogfood.yml  release-image.yml
depdetective/: __main__.py  cli.py  config.py  gitops.py  hooks.py  logging_utils.py  models.py  registry_clients.py  runner.py  security.py
depdetective/providers/: __init__.py  azure_devops.py  base.py  generic_git.py  github.py  gitlab.py
depdetective/scanners/: __init__.py  base.py  dotnet_nuget.py  go_mod.py  maven_pom.py  node_package_json.py  python_pyproject.py  python_requirements.py  rust_cargo.py
depdetective/updaters/: __init__.py  base.py  dotnet_nuget.py  go_mod.py  maven_pom.py  node_package_json.py  python_pyproject.py  python_requirements.py  rust_cargo.py
docs/: ARCHITECTURE.md  CI_EXAMPLES.md  CONFIG_REFERENCE.md  RELEASE.md
examples/ci/: azure-pipelines-depdetective.yml  azure-pipelines-release-image.yml  (+3 more)
tests/: test_cli.py  test_config.py  test_dotnet_scanner.py  test_dotnet_updater.py  test_gitops.py  test_go_mod_scanner.py  test_go_mod_updater.py  test_maven_scanner.py  test_maven_updater.py  test_node_package_updater.py  test_provider_azure_devops_api.py  test_providers.py  test_python_pyproject_scanner.py  test_python_pyproject_updater.py  test_python_requirements_updater.py  test_runner_clone_url.py  test_runner_detection.py  test_runner_integration.py  test_rust_scanner.py  test_rust_updater.py
(+3 files in other folders)
