[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "depdetective"
version = "0.1.0"
description = "Pluggable, provider-agnostic dependency update and vulnerability bot."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "DepDetective Contributors" }
]
dependencies = [
  "PyYAML>=6.0.1",
  "requests>=2.32.0",
  "packaging>=24.0",
  "tomlkit>=0.13.2"
]

[project.scripts]
depdetective = "depdetective.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
